frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja-frontend
  labels:
    app.kubernetes.io/name: vikunja-frontend
    app.kubernetes.io/service: frontend
spec:
  replicas: 1
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: vikunja-frontend
      app.kubernetes.io/service: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vikunja-frontend
        app.kubernetes.io/service: frontend
    spec:
      securityContext:
        fsGroup: 1001
      containers:
      - name: api
        image: frontend
        imagePullPolicy: Always
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            memory: "128M"
            cpu: "100m"
          limits:
            memory: "500M"
            cpu: "256m"
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
