frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja-frontend
  labels:
    app.kubernetes.io/name: vikunja-frontend
    app.kubernetes.io/service: frontend
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: vikunja-frontend
    app.kubernetes.io/service: frontend
  sessionAffinity: None
  type: ClusterIP
