frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: vikunja-frontend
    app.kubernetes.io/service: frontend
  name: vikunja-frontend
spec:
  rules:
  - host: VIKUNJA_FRONTEND_HOST
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vikunja-frontend
            port:
              number: 80
